--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 html{
     font-family: 'Monserrat' sans-serif;
     font-size: 20px;
+    color: white;
 }
 section{
     height: 100vh;
@@ -15,6 +16,23 @@ section{
     height: 100%;
     width: 100%;
 }
+.slide{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
 .slide-1{
-    background-image: url();
+    background-image: url(../img/1.jpg);
+}
+.slide-2{
+    background-image: url(../img/2.png);
+}
+.slide-3{
+    background-image: url(../img/3.jpg);
+}
+.slide-4{
+    background-image: url(../img/4.jpg);
 }
