--- a/css/style.css
+++ b/css/style.css
@@ -81,3 +81,26 @@ section{
 .buttons div:hover{
     background-color: white;
 }
+
+
+/* dots style */
+.dots{
+    z-index: 5;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.dots .dot{
+    display: inline-block;
+    height: 10px;
+    width: 10px;
+    background-color: rgba(255, 255, 255, 0.198);
+    border-radius: 50%;
+    margin-left: 5px;
+    cursor: pointer;
+}
+.dots .dot.active{
+    background-color: white;
+    
+}
