--- a/css/style.css
+++ b/css/style.css
@@ -99,8 +99,9 @@ section{
     border-radius: 50%;
     margin-left: 5px;
     cursor: pointer;
+    transition: 0.3s ease wid;
 }
 .dots .dot.active{
     background-color: white;
-    
+    width: 30px;
 }
